--- a/css/jquery-comments.css
+++ b/css/jquery-comments.css
@@ -662,3 +662,37 @@ http://viima.github.io/jquery-comments/*/
 .jquery-comments.read-only .actions {
 	display: none;
 }
+
+/* Authenticate */
+.jquery-comments .authenticate-warpper{
+	width: 3.6rem;
+	float:left;
+}
+.jquery-comments .commenting-field.main .authenticate-warpper .profile-picture{
+	margin-bottom:0;
+}
+.jquery-comments .authenticate-warpper .authenticate > span {
+	float: left;
+
+	color:#FFF;
+	padding: 0 1em;
+	font-size: 1em;
+	line-height: 1.6em;
+	margin-top: .4em;
+	margin-left: -0.5em;
+	border: 1px solid rgba(0, 0, 0, 0);
+	opacity: .5;
+}
+
+.jquery-comments .authenticate-warpper .authenticate > span.enabled {
+	opacity: 1;
+	cursor: pointer;
+}
+
+.jquery-comments .authenticate-warpper .authenticate > span:not(.enabled) {
+	pointer-events: none;
+}
+
+.jquery-comments .authenticate-warpper .authenticate > span.enabled:hover {
+	opacity: .9;
+}
